fix bug, no center align in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,14 +206,15 @@ h1,h2,h3,h4,h5,h6 {
 
 @media (max-width:1028px) {
 
+  .title-mediaq {
+    text-align: center;
+  }
+
   .title-image {
     position: static;
     transform: rotate(0);
   }
 
-  #title {
-    text-align: center;
-  }
 
 }
 
